XP-3822 Validation - Don't show validation message for element blocks - Removed validation viewer from FormItemSetView - I assume that each FormItem will handle its validation separately - Fixed validation look of Site configurator - made input view to check for appropriate InputType and skip its renderValidationErrors() call - Fixed look of selected items within the ContentCombobox - removed extra padding, aligned edit and close icons, adjusted position of drag icon - Fixed upload button's position in html area modal dialog

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/content-combo-box.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/content/content-combo-box.less
@@ -1,14 +1,11 @@
 .wizard-step-form .content-combo-box {
   .selected-option {
-    .edit {
-      &:extend(.icon);
-      .icon-pencil2;
 
-      float: right;
-      margin: 0 20px;
-      font-size: 12px;
-      text-decoration: none;
-      cursor: pointer;
+    padding: 0 8px 8px 8px;
+
+    .edit, .remove {
+      position: relative;
+      top: 8px;
     }
   }
 }
